--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,10 @@
 
 @custom-variant dark (&:is(.dark *));
 
+html {
+    scroll-behavior: smooth;
+}
+
 :root {
     --color-blue: #94eaff;
     --color-light-100: #e7f2ff;
@@ -143,8 +147,19 @@
     #explore-btn {
         @apply border-dark-200 bg-dark-100 flex w-fit cursor-pointer  rounded-full border px-8 py-3.5 max-sm:w-full text-center;
 
+        background: linear-gradient(to right, var(--color-dark-100), var(--color-dark-200));
+        background-size: 100% 100%;
+
+        transition: all 0.3s ease-in-out;
+
         a {
             @apply flex-center gap-2 text-center w-full;
+        }
+
+        &:hover {
+            @apply bg-dark-200;
+            background-position: left;
+            background-size: 200% 200%;
         }
     }
 
@@ -174,6 +189,19 @@
 
     #event-card {
         @apply flex flex-col gap-3;
+
+        @apply glass;
+
+        border-radius: var(--radius);
+        padding: 10px;
+        transition: all 0.3s ease-in-out;
+        cursor: pointer;
+
+        &:hover {
+            box-shadow: 0px 4px 40px 0px #00000066;
+            transform: translateY(-5px);
+        }
+        
 
         .poster {
             @apply h-[300px] w-full rounded-lg object-cover;
